# plasma-rust-framework

./: .gitignore  .travis.yml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  precommit.sh
.github/ISSUE_TEMPLATE/: bug_report.md  research-issue-template.md
abi-derive/: Cargo.toml
abi-derive/src/: lib.rs
abi-utils/abi-derive/: Cargo.toml
abi-utils/abi-derive/src/: lib.rs
abi-utils/abi-utils/: Cargo.toml
abi-utils/abi-utils/src/: abi.rs  error.rs  lib.rs
abi-utils/tests/: Cargo.toml
abi-utils/tests/src/: lib.rs
android/: Cargo.toml
chamber/: Cargo.toml
client/: Cargo.toml
client/src/: error.rs  lib.rs  plasma_rpc.rs  sync.rs
client/src/state/: state_db.rs  state_manager.rs
client/src/sync/: sync_db.rs  sync_manager.rs
clients/: Cargo.toml  README.md
clients/examples/: plasma_aggregator.rs  plasma_client.rs  plasma_client_cli.rs  plasma_client_server.rs
clients/src/: android.rs  block_db.rs  block_manager.rs  lib.rs  plasma-client.rs  plasma.rs  plasma_aggregator.rs  plasma_client.rs  state_channel.rs  state_db.rs
clients/src/plasma/: block_db.rs  block_manager.rs  command.rs  error.rs  plasma_aggregator.rs  plasma_block.rs  plasma_client.rs  query.rs  state_db.rs  state_update.rs  token.rs  utils.rs  wallet_db.rs  wallet_manager.rs
contract-wrapper/: Cargo.toml  CommitmentChain.json  Deposit.json  TestPredicate.json  UniversalDecisionContract.json
contract-wrapper/src/: commitment_contract_adaptor.rs  contract_wrapper.rs  error.rs  lib.rs  main.rs  plasma_contract_adaptor.rs  universal_decision_contract_adaptor.rs
core/: Cargo.toml
core/src/: data_structure.rs  lib.rs  ovm.rs  types.rs
core/src/data_structure/: abi.rs  block.rs  checkpoint.rs  error.rs  metadata.rs  plasma_block.rs  range.rs  signed_transaction.rs  state_object.rs  state_query.rs  state_update.rs  transaction.rs
core/src/ovm/: decider.rs  quantifier.rs  types.rs
core/src/process/: block_generator.rs
db/: Cargo.toml
db/src/: error.rs  impls.rs  lib.rs  prelude.rs  range.rs  traits.rs
db/src/impls/: event_db.rs  kvs.rs  rangedb.rs
db/src/impls/event_db/: memory.rs
db/src/impls/kvs/: global_memory.rs  leveldb.rs  memory.rs
db/src/traits/: event_db.rs  kvs.rs  rangestore.rs
event-watcher/: Cargo.toml  README.md
event-watcher/src/: event_db.rs  event_watcher.rs  lib.rs  main.rs
merkle-interval-tree/: Cargo.toml
merkle-interval-tree/src/: address_tree.rs  double_layered_tree.rs  hash.rs  index.rs  interval_tree.rs  lib.rs
operator/: Cargo.toml
operator/src/: block.rs  context.rs  error.rs  lib.rs
operator/src/block/: block_db.rs  block_manager.rs  types.rs
operator/src/rpc/: plasmarpc.rs  plasmarpcimpl.rs
ovm/: Cargo.toml
ovm/src/: db.rs  deciders.rs  error.rs  lib.rs  property_executer.rs  property_executor.rs  quantifiers.rs  statements.rs  types.rs  utils.rs
ovm/src/db/: channel_db.rs  hash_preimage_db.rs  message_db.rs  range_at_block_db.rs  signed_by_db.rs  transaction_db.rs  transaction_filter.rs
ovm/src/deciders/: and_decider.rs  channel_decider.rs  excluded_at_block_decider.rs  for_all_such_that_decider.rs  has_lower_nonce.rs  included_at_block_decider.rs  included_in_interval_tree_at_block_decider.rs  is_deprecated_decider.rs  not_decider.rs  or_decider.rs  ownership_decider.rs  preimage_exists_decider.rs  signed_by_decider.rs  there_exists_such_that_decider.rs  verify_tx_decider.rs
ovm/src/quantifiers/: block_range_quantifier.rs  hash_quantifier.rs  integer_quantifiers.rs  property_quantifier.rs  signed_by_quantifier.rs  state_update_quantifier.rs  swap_quantifier.rs  tx_quantifier.rs
ovm/src/statements/: plasma.rs  state_channel.rs
ovm/src/statements/plasma/: atomic_state.rs  channel.rs  offline_swap.rs  ownership.rs  swap.rs
ovm/src/types/: core.rs  decision_value.rs  input_type.rs  inputs.rs  plasma_data_block.rs  property_input.rs  state_update.rs  state_update_list.rs  witness.rs
predicate-plugins/: Cargo.toml
predicate-plugins/src/: decider_manager.rs  deciders.rs  lib.rs  ownership.rs  parameters.rs  predicate.rs  predicate_manager.rs  quantifiers.rs
predicate-plugins/src/deciders/: and_decider.rs  preimage_exists_decider.rs
predicate-plugins/src/quantifiers/: integer_quantifiers.rs
pubsub-db/: Cargo.toml
pubsub-db/src/: client.rs  lib.rs  main.rs  message.rs  server.rs
pubsub-db/src/client/: client.rs  mod.rs
pubsub-db/src/server/: db.rs  mod.rs  server.rs
pubsub-messaging/: Cargo.toml
pubsub-messaging/examples/: simple_client.rs  simple_server.rs  simple_server_and_client.rs
pubsub-messaging/src/: client.rs  error.rs  lib.rs  main.rs  message.rs  server.rs
pubsub-messaging/src/client/: client.rs  client_impl.rs  handler.rs  mod.rs
pubsub-messaging/src/server/: handler.rs  mod.rs  server.rs  server_impl.rs
sum_merkle_tree/: Cargo.toml
sum_merkle_tree/src/: index.rs  lib.rs
wasm/src/: lib.rs
