[package]
name = "plasma-chamber"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[lib]
path = "chamber/src/lib.rs"


[workspace]
members = [
	"abi-derive",
	"contract-wrapper",
	"core",
	"clients",
	"db",
	"ovm",
	"pubsub-messaging",
	"event-watcher",
	"merkle-interval-tree"
]

[dependencies]
clippy = {version = "*", optional = true}
