[package]
name = "plasma-chamber"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[workspace]
members = [
	"abi-utils/abi-derive",
	"abi-utils/tests",
	"contract-wrapper",
	"core",
	"clients",
	"db",
	"ovm",
	"pubsub-messaging",
	"event-watcher",
	"merkle-interval-tree"
]

[dependencies]
clippy = {version = "*", optional = true}
