[package]
name = "plasma-client"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
ethabi = { git = 'https://github.com/cryptoeconomicslab/ethabi', branch = 'tuple-support-v7.0.0' }
ethereum-types = "^0.5.2"
event-watcher = { path = "../event-watcher" }
failure = "0.1.5"
futures = "0.1.26"
hex = "0.3.1"
hyper = { version = "0.12"}
jsonrpc-core = "12.0.0"
jsonrpc-http-server = "12.0.0"
plasma-core = { path = "../core" }
plasma-db = {path = "../db"}
predicate-plugins = { path = "../predicate-plugins" }
tokio = { version = "0.1" }

[dependencies.jsonrpc-core-client]
version = "12.0.0"
features = ["http"]

[features]
default = ["plasma-db/require-leveldb"]
noleveldb = ["plasma-db/no-leveldb"]
