[package]
name = "plasma-clients"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
clap = "2.33.0"
ethabi = { git = 'https://github.com/cryptoeconomicslab/ethabi', branch = 'tuple-support-v7.0.0' }
ethereum-types = "^0.5.2"
hex = "0.3.1"
ovm = { path = "../ovm" }
plasma-core = { path = "../core" }
plasma-db = { path = "../db" }
contract-wrapper = { path = "../contract-wrapper" }
failure = "0.1.5"
futures = "0.1.27"
merkle-interval-tree = { path = "../merkle-interval-tree" }
tiny-keccak = "1.4.2"
bincode = "*"
pubsub-messaging = { path = "../pubsub-messaging" }
tokio = "0.1.21"
actix-web = "1.0.7"
serde = "*"
log = "*"
env_logger = "*"
chrono = { version = "0.4", features = ["serde"] }
libsecp256k1 = "0.2.2"
rand = "*"

[dependencies.ethsign]
version = "0.6.1"
default-features = false
features = ["pure-rust"]
