[package]
name = "contract-wrapper"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
web3 = { git = "https://github.com/cryptoeconomicslab/rust-web3", branch = 'ethabi-tuple' }
ethabi = { git = 'https://github.com/cryptoeconomicslab/ethabi', branch = 'tuple-support-v7.0.0' }
serde = '*'
hex-literal = '*'
plasma-core = { path = '../core' }
ovm = { path = '../ovm' }
bytes = "0.4.12"
failure = "0.1.5"