[package]
name = "plasma-db"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
db-key = "0.0.5"
failure = "0.1.5"
rlp = "0.4.0"
tempdir = "0.3.7"
parking_lot = "0.8.0"

[dependencies.leveldb]
version = "0.8.4"
optional = true

[features]
require-leveldb = ["leveldb"]
no-leveldb = []