[package]
name = "merkle-interval-tree"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
abi-derive = { path = "../abi-utils/abi-derive"}
abi-utils = { path = "../abi-utils/abi-utils"}
ethabi = { git = 'https://github.com/cryptoeconomicslab/ethabi', branch = 'tuple-support-v7.0.0' }
sha3 = "0.8.2"
bytes = "0.4.12"
byteorder = "1.3.1"
ethereum-types = "^0.5.2"
num-traits = { version = "0.2.8", default-features = false }
