[package]
name = "ovm"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
abi-derive = { path = "../abi-derive"}
bytes = "0.4.12"
ethabi = { git = 'https://github.com/cryptoeconomicslab/ethabi', branch = 'tuple-support-v7.0.0' }
ethereum-types = "^0.5.2"
failure = "0.1.5"
hex = "0.3.1"
lazy_static = "1.3.0"
tiny-keccak = "1.4.2"
plasma-core = { path = "../core" }
plasma-db = { path = "../db" }
merkle-interval-tree = { path = "../merkle-interval-tree" }
serde = { version = "1.0", features = ["derive"] }
bincode = "*"

[dependencies.ethsign]
version = "0.6.1"
default-features = false
features = ["pure-rust"]
